[project]
name = "yt-binder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async>=0.6.2",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.3.17",
]
